--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,13 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="LabelWithLeftIcon">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:gravity">center_vertical</item>
+        <item name="android:paddingLeft">@dimen/spacing_small</item>
+        <item name="android:textColor">@color/colorPrimaryLight</item>
+        <item name="android:layout_height">wrap_content</item>
+    </style>
+
 </resources>
